# dashboard

./: .cursorignore  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLUGINS.md  README.md  STORE_INTEGRATION.md  alembic.ini  dashboard.yaml  docker-compose.deps.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.aiassistant/rules/: main.md
.github/workflows/: ci.yml  desktop-thin-release.yml  docker.yml
.junie/: guidelines.md
.run/: 01 Infra Up (docker).run.xml  02 Backend API (local all-in-one).run.xml  02 Backend API (local).run.xml  03 Worker (local).run.xml  04 Frontend Dev (local).run.xml  05 Full Stack (docker).run.xml  06 Full Stack Down (docker).run.xml
_tmp/agents/: AgentAuraFxDemo.vue  AgentAvatarFx.vue  AgentAvatarSphereParticlesThree.vue  FxModeToggle.vue
_tmp/autodiscover/: __init__.py  http_probe.py  manifest.py  network.py  plugin.py  registry.py  schemas.py  storage.py
_tmp/pleiad/: PleiadCanvas.vue  PleiadExperience.vue
alembic/: env.py
alembic/versions/: 20260222_0001_init_sqlite_schema.py
backend/: README.md  app_factory.py  bootstrap.py  main.py
backend/alembic/: env.py
backend/config/: container.py  settings.py
backend/core/: logging_setup.py
backend/db/: __init__.py  compat.py  models.py  session.py
backend/depens/: __init__.py
backend/oko/: worker.py
backend/scheme/: dashboard.py
backend/service/: config_service.py
backend/tools/: __init__.py  auth.py  events.py  health.py  logging.py
contracts/storage/: tables.yaml
data/: autodiscover_result.json  lan_scan_result.json
docker/: Dockerfile  Dockerfile.plugin-store
docs/: build.md  incremental-evolution-plan.md
docs/features/: core-normalization.md
docs/plugins/: service_card_extensions.md  storage_migration.md  storage_mode_a.md  storage_mode_b.md  storage_rpc.md
frontend/: ARCHITECTURE_UI.md  README.md  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.app.json  tsconfig.typecheck.services.json  vite.config.js  vite.config.ts
frontend/scripts/: build-desktop-assets.mjs  build-to-backend.mjs  check-file-length.mjs  ensure-sidecar.mjs  sync-default-config.mjs
frontend/src/: App.vue  main.ts  router.ts  styles.css  styles.css.map  styles.scss  typed-router.d.ts
scripts/: backend_sidecar.py  build_macos_app_arm64.sh  build_sidecar_macos_arm64.sh
scripts/dev/: stack.py
src/: main.py
src/api/: __init__.py
src/config/: __init__.py  container.py  settings.py
src/dashboard_config/: __init__.py  models.py  service.py
src/db/: __init__.py  migrations.py  models.py
src/desktop/: backend_sidecar.py  build_macos_app_arm64.sh  build_sidecar_macos_arm64.sh
src/frontend/: ARCHITECTURE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.typecheck.app.json  tsconfig.typecheck.services.json  vite.config.js
src/lan_scan/: __init__.py  service.py
src/scheme/: __init__.py  dashboard.py
src/service/: __init__.py  config_service.py
src/static/: site.webmanifest
src/templates/: index.html
src/tools/: __init__.py  auth.py  events.py  health.py  logging.py  proxy.py
store/: README.md  __init__.py  main.py  schemas.py
store/api/: __init__.py  plugins.py  rpc.py  system.py
store/core/: config.py
store/plugins/: plugins.json
store/services/: __init__.py  github.py  storage.py
tauri/: Cargo.toml  README.md  tauri.thin.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: main.rs
templates/error/: 400.html  401.html  403.html  404.html  500.html  502.html  503.html
(+933 files in other folders)
