[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "faker>=40.4.0",
    "mypy>=1.18.2",
    "polyfactory>=3.2.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
show_error_codes = true
explicit_package_bases = true
mypy_path = "src"
files = ["src"]
exclude = [
    "^src/frontend/",
    "^src/static/",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src", "tests/backend"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/frontend/*",
    "src/static/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
