[project]
name = "dashboard"
version = "0.1.0"
description = "FastAPI + Vue dashboard for service links, health checks, and LAN scan"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "structlog>=25.4.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "cyclonedx-bom>=4.1.1",
    "faker>=40.4.0",
    "mypy>=1.18.2",
    "pip-audit>=2.9.0",
    "polyfactory>=3.2.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "refurb>=2.2.0",
    "ruff>=0.15.2",
    "semgrep>=1.143.0",
    "types-PyYAML>=6.0.12.20250915",
    "vulture>=2.14",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
show_error_codes = true
explicit_package_bases = true
mypy_path = "src"
files = ["src"]
exclude = [
    "^src/frontend/",
    "^src/static/",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src", "tests/backend"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/frontend/*",
    "src/static/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
