[package]
name = "oko-desktop"
version = "0.1.0"
description = "Oko desktop shell for macOS Apple Silicon"
authors = ["Oko"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "2", features = [ "tray-icon", "image-png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
